--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						</div>
 						
 						<div id="profile">
-							<img src="imgs/profile.jpg" alt="profile">
+							<img src="" alt="profile">
 						</div>
 						
 						<div id="maincontent1">
