--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				LinkedIn
 				</a>
 				
-				<a href="https://www.linkedin.com/in/granthitson/" target="_blank" class="social">
+				<a href="https://github.com/granthitson?tab=repositories" target="_blank" class="social">
 				GitHub
 				</a>
 					
