--- a/html/3dart.html
+++ b/html/3dart.html
@@ -51,7 +51,7 @@
 									<div class = "info">
 										<iframe src="../imgs/graphic_design/hitson1.pdf"></iframe>
 										<img src="../imgs/graphic_design/bookcover-gkh.png" alt="bookcover">
-										<img class="seperate" src="../imgs/graphic_design/logo.png" alt="logo">
+										<img class="seperate" src="../imgs/graphic_design/logo.PNG" alt="logo">
 										<img class="seperate" src="../imgs/graphic_design/mult.png" alt="logo multiple">
 										<iframe src="../imgs/graphic_design/hitsonfilm.pdf"></iframe>
 										<img class="seperate" src="../imgs/graphic_design/movieprocess1-02.png" alt="movie process 1">
