--- a/html/3dart.html
+++ b/html/3dart.html
@@ -88,7 +88,7 @@
 								<div class="date">
 									<div class = "title">
 										<h2>Turning 2D to 3D</h2>
-										<p>Autodesk Maya<br>After Effects<br>Photoshop<br><br></p>
+										<p>Autodesk Maya<br>After Effects<br>Photoshop<br><br>Notes:<br>Hurricane Florence</p>
 									</div>
 									<div class = "info">
 										<video controls>
@@ -112,7 +112,7 @@
 								<div class="date">
 									<div class = "title">
 										<h2>3D Animation <br> CSC 320</h2>
-										<p>Autodesk Maya<br>After Effects<br>Photoshop<br><br></p>
+										<p>Autodesk Maya<br>After Effects<br>Photoshop<br><br>Notes:<br>Hurricane Florence</p>
 									</div>
 									<div class ="info">
 									
