--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 Proficient: Python, C#, Java
 Experience: C++, MySQL, PHP, JS, HTML/CSS
 
-Proficient: Unity, Autodesk Maya, Adobe Photoshop/Illustrator/After Effects
-Experience: Git, J2EE, WebSphere MQ/Applications, SoapUI
+Proficient: Unity, Autodesk Maya
+Experience: Adobe Photoshop/Illustrator/After Effects, Git/VCS, J2EE, FTP Clients, 
+			Rational Team Concert (RTC), WebSphere MQ
 </pre>
 						</div>
 					</div>
@@ -56,6 +57,20 @@ Experience: Git, J2EE, WebSphere MQ/Applications, SoapUI
 						</div>
 						
 						<div class="info1">
+</pre>
+<span id="break"></span>
+<pre>
+<b>Remote Junior Developer</b>					       					       	    							 May 2020 - Present
+Remote - Washington, DC
+	o	Worked with a small team to help prepare WinWinLabs for launch. Used PHP, MySQL,
+	JS, and HTML to develop new features, such as an inventory management system, and to
+	test and modify existing components for the WinWinLabs website.
+</pre>
+						
+<pre><b>Developer</b>						         							     						     May 2020 - Present
+WinWinLabs, Remote
+</pre>
+<span id="break"></span>
 <pre><b>VASC Undergraduate Developer</b>						         							     January 2020 - Present
 UNC Wilmington, Wilmington, NC
 	o	Worked with a team of students to help professors script, model, and animate a
@@ -81,9 +96,9 @@ BlueCross BlueShield NC, Durham, NC
 						<div id="edu" class="info1">
 <pre>
 <b>University of North Carolina at Wilmington</b>						       									May 2020
-Bachelor of Science: Computer Science							      									GPA: 3.82
+Bachelor of Science: Computer Science							      									GPA: 3.84
 Minor: Digital Arts
-Dean's List: Fall 2016, Fall 2017, Spring 2018, Fall 2018,Spring 2019, Fall 2019
+Dean's List: 7 semesters
 </pre>
 						</div>
 					</div>
