--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ Experience: Adobe Photoshop/Illustrator/After Effects, Git/VCS, J2EE, FTP Client
 						
 						<div class="info1">
 </pre>
-<span id="break"></span>
+
 <pre>
 <b>Remote Junior Developer</b>					       					       	    							 May 2020 - Present
-Remote - Washington, DC
+WinWinLabs - Remote - Washington, DC
 	o	Worked with a small team to help prepare WinWinLabs for launch. Used PHP, MySQL,
 	JS, and HTML to develop new features, such as an inventory management system, and to
 	test and modify existing components for the WinWinLabs website.
