--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 						
 						<div id="skills" class="info1">
 <pre>
-Proficient: Python, C#, Java
-Experience: C++, MySQL, PHP, JS, HTML/CSS
+<b></Mb>Languages</b>
+	Proficient: Python, C#, Java
+	Experience: MySQL, PHP, JS, C++, HTML/CSS*
 
-Proficient: Unity, Autodesk Maya
-Experience: Adobe Photoshop/Illustrator/After Effects, Git/VCS, J2EE, FTP Clients, 
-			Rational Team Concert (RTC), WebSphere MQ
+<b>Technologies</b>
+	Unity, Autodesk Maya, Adobe Photoshop/Illustrator/After Effects, Git/VCS, J2EE, FTP Clients, 
+	Rational Team Concert (RTC), WebSphere MQ
 </pre>
 						</div>
 					</div>
@@ -105,8 +106,6 @@ Dean's List: 7 semesters
 
 
 			</div>
-			
-			<p id="gkh"> Grant Hitson - Jan 2020 </p>
 
 		</div>
 		
